--- a/dts/s3ma.dts
+++ b/dts/s3ma.dts
@@ -103,5 +103,26 @@
                       reg = <0x080d0000 0x1000 >;
                       interrupts = < 3 0 >;
                      };
+
+              spi0:	  ssi@0x080a4000 {
+              		   compatible = "pl022";
+              		   reg = <0x080a4000 0x1000>;
+              		  };
+              spi1:	  ssi@0x080a5000 {
+              		   compatible = "pl022";
+              		   reg = <0x080a5000 0x1000>;
+              		  };
+              spi2:	  ssi@0x080a6000 {
+              		   compatible = "pl022";
+              		   reg = <0x080a6000 0x1000>;
+              		  };
+              spi3:	  ssi@0x080a7000 {
+              		   compatible = "pl022";
+              		   reg = <0x080a7000 0x1000>;
+              		  };
+              spi4:	  ssi@0x080a8000 {
+              		   compatible = "pl022";
+              		   reg = <0x080a8000 0x1000>;
+              		  };
       };
  };
