--- a/dts/s3ma.dts
+++ b/dts/s3ma.dts
@@ -13,13 +13,16 @@
          chosen { };
          aliases { };
          
-         	   memory@00000000 { 
+         	   memory@0x00000000 { 
                device_type = "memory"; 
-               reg = <0x00000000 0x04100000>; 
+               reg = <0x00000000 0x04100000>;
                
                };
         
-               
+         	   memory@0x80000000 { 
+               device_type = "memory"; 
+               reg = <0x80000000 0x40000000>; 
+               };
  
       intc: interrupt-controller@3be01000 {
               compatible = "arm,cortex-a9-gic";
