Adding daughter card build configuration

--- a/boards.cfg
+++ b/boards.cfg
@@ -1273,4 +1273,5 @@ Orphan  powerpc     ppc4xx         -           sandburst       metrobox         
 Orphan  arm         arm1136        mx31        -               imx31_phycore       imx31_phycore_eet                     imx31_phycore:IMX31_PHYCORE_EET                                                                                                   (resigned) Guennadi Liakhovetski <g.liakhovetski@gmx.de>
 Orphan  arm         arm1136        mx31        freescale       -                   mx31ads                               -                                                                                                                                 (resigned) Guennadi Liakhovetski <g.liakhovetski@gmx.de>
 # Status, Arch, CPU:SPLCPU, SoC, Vendor, Board name, Target, Options, Maintainers
-Active  arm         armv7   s3ma exelis  sp3dev      sp3dev                        
+Active  arm         armv7   s3ma exelis  sp3dev           sp3dev                        
+Active  arm         armv7   s3ma exelis  sp3dev           sp3dtc          sp3dev:SP3DTC                        
